@@ -482,9 +482,8 @@ sub filter_option_modify {
       my $new_opt = { };
 
       # Don't add empty options as an empty string key with undef value; even
-      # though that's technically legit, we want to reserve this notation for
-      # the last display number element and rather represent this situation by
-      # an empty hash.
+      # though that's technically legit and would semantically fit the notion
+      # as well, we rather want to represent this situation by an empty hash.
       if (!(($needle_key) || (defined ($needle_value)))) {
         print {*STDERR} "Empty option addition/modification requested, this is deprecated. Adding empty hash.\n";
       }
