@@ -240,6 +240,8 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       a different comment.
     - X2Go/Server/Agent/NX/Options.pm: avoid copying arrays if not necessary
       when passing to grep and map operations.
+    - X2Go/Server/Agent/NX/Options.pm: rework the lastly modified comment
+      again, the changed explanation didn't match the reality.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
